Added login_required, follow functionality, default user image, topTopics context and minor changes

--- a/forum/static/forum/css/main.css
+++ b/forum/static/forum/css/main.css
@@ -208,7 +208,7 @@ article:hover{
     box-shadow: 1px 4px rgba(0,0,0, 0.1);
 }
 
-.topicArticle button{
+.topicArticle input[type=submit]{
     position: absolute;
     right: 10px;
     /*background-color: #414059;*/
