--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -24,13 +24,11 @@
                     {% endif %}
                 </div>
                 <div class="buttonspost">
-                    {% if user.is_authenticated %}
                     <form class="likeForm" method="post" action="{% url 'forum:api_like_toggle' %}">
                         {% csrf_token %}
                         <input type="hidden" name="post_id" value="{{ post.id }}">
-                        <input type="submit" class="like {% if user in post.post_pizzas.all %}liked{% endif %}"  value="">
+                        <input type="submit" class="like {% if not user.is_authenticated or user in post.post_pizzas.all %}liked{% endif %}"  value="">
                     </form>
-                    {% endif %}
                     <p name="{{ post.id }}" class="numberPizzas">{{ post.num_likes }} Like{{ post.num_likes|pluralize }}</p>
                 </div>
             </article>
@@ -42,5 +40,5 @@
 {% endblock articles %}
 
 {% block js %}
-    <script src="{% static 'forum/js/list.js' %}"></script>
+    <script src="{% static 'forum/js/details.js' %}"></script>
 {% endblock %}
