--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -53,7 +53,7 @@
                                     <form class="likeForm" method="post" action="{% url 'forum:api_comment_like_toggle' %}" name="Comment">
                                         {% csrf_token %}
                                         <input type="hidden" name="article_id" value="{{ comment.id }}">
-                                        <input type="submit" class="like commentsLike {% if user in comment.post_pizzas.all %} liked commentsLiked {% endif %}"  value="">
+                                        <input type="submit" class="like commentsLike {% if not user.is_authenticated or user in comment.comment_pizzas.all %} liked commentsLiked {% endif %}"  value="">
                                     </form>
                                 {% endif %}
                                 <p name="Comment{{ comment.id }}" class="numberPizzas commentsPizzas">{{ comment.num_likes }} Like{{ comment.num_likes|pluralize }}</p>
