added stylish things to post

--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -46,7 +46,7 @@
 
     <header>
         <div class="leftheader">
-            <img src="{% static 'forum/img/undraw_at_home_octe.png' %}">
+            <img src="{% static 'forum/img/undraw_at_home_octe.png' %}" id="forumicon" value="{% url 'forum:home' %}">
             <a value="{% url 'forum:home' %}" id="forumtitle">Quarantine Life</a>
         </div>
         <div class="rightheader">
