Added date formating to ajax date received

--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -40,5 +40,5 @@
 {% endblock articles %}
 
 {% block js %}
-    <script src="{% static 'forum/js/details.js' %}"></script>
+    <script src="{% static 'forum/js/topic_details.js' %}"></script>
 {% endblock %}
