--- a/forum/templates/forum/topic_details.html
+++ b/forum/templates/forum/topic_details.html
@@ -52,5 +52,5 @@
 {% endblock rightAside %}
 
 {% block js %}
-<script src="{% static 'forum/js/details.js' %}"></script>
+<script src="{% static 'forum/js/topic_details.js' %}"></script>
 {% endblock %}
