--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -7,8 +7,10 @@
         {% for post in page_list %}
             <article class="detail_post-articles" value="{% url 'forum:post' post.id %}">
                 <div class="toppost">
-                    <a href="{% url 'forum:profile' post.owner.username %}"><img src="{% static 'forum/img/avatar6.png' %}" alt="Avatar" class="avatar"></a>
+                    <a href="{% url 'forum:profile' post.owner.username %}"><img src="{{ post.owner.profile.profile_image }}" alt="Avatar" class="avatar"></a>
                     <a href="{% url 'forum:profile' post.owner.username %}">{{ post.owner.username}}</a>
+                    <a>posted in</a>
+                    <a href="{% url 'forum:topic' post.topic.slug %}">t/{{ post.topic.title }}</a>
                     <a>{{ post.pub_date }}</a>
                 </div>
                 <div class="textpost">
