--- a/forum/static/forum/css/main.css
+++ b/forum/static/forum/css/main.css
@@ -562,7 +562,7 @@ article:hover{
     justify-content: center;
 }
 
-.login-container, .createPost-container{
+.login-container{
     width: 60%;
     height: 500px;
     background-color: white;
@@ -570,6 +570,32 @@ article:hover{
     text-align: center;
     display: flex;
     position: absolute;
+}
+
+.createPost-container{
+    width: 60%;
+    height: 500px;
+    background-color: white;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+    position: absolute;
+    /*flex-direction: column;*/
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.createPost-container img{
+    width: 65%;
+    height: 100%;
+}
+
+#createPost_form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35%;
+    margin-bottom: 20px;
 }
 
 #close{
