--- a/forum/static/forum/css/main.css
+++ b/forum/static/forum/css/main.css
@@ -17,7 +17,7 @@ header{
     width: 100%;
     height: 100px;
     top: 0;
-    overflow: hidden;
+    /*overflow: hidden;*/
     display: flex;
 }
 
@@ -35,10 +35,29 @@ header{
     align-items: center;
 }
 
+.rightheader img{
+    border-radius: 50%;
+    margin-right: 20px;
+    width: 50px;
+    height: 50px;
+}
+
 .searchBar{
     border-radius: 100px;
     border: 1px solid gray;
     padding: 6px 7px;
+}
+
+.searchButton{
+    border: 1px solid transparent;
+    border-bottom: 1px solid gray;
+    font-size: 14px;
+    text-align: center;
+    margin-right: 20px;
+}
+
+.searchButton:focus{
+    outline: none;
 }
 
 #forumtitle{
@@ -57,7 +76,7 @@ header input, header button{
     margin-right: 10px;
 }
 
-header img{
+.leftheader img{
     /*width: 50px;*/
     height: 50px;
     margin-left: 20px;
@@ -260,6 +279,7 @@ article:hover{
     box-shadow: 5px 8px rgba(0,0,0, 0.1);
     height: fit-content;
     height: -moz-fit-content;
+    margin-bottom: 20px;
 }
 
 .searchTab{
@@ -288,6 +308,10 @@ article:hover{
     display: flex;
     padding: 20px;
     border-radius: 0 0 5px 5px;
+}
+
+.tabButton{
+    cursor: pointer;
 }
 
 .topicsearch{
@@ -335,7 +359,7 @@ article:hover{
 .toppost a:nth-child(2n+1){
     margin-left: 5px;
     color: gray;
-    font-size: 10px;
+    font-size: 12px;
     display: flex;
     align-items: center;
 }
@@ -347,7 +371,12 @@ article:hover{
 }
 
 .topsearchpost a:nth-child(2n){
-    font-size: 14px;
+    font-size: 16px;
+}
+
+.textpost img{
+    max-height: 400px;
+    border-radius: 2px;
 }
 
 .postText{
@@ -355,8 +384,8 @@ article:hover{
 }
 
 .postsearchtitle{
-    font-size: 12px;
-    margin: 0px;
+    font-size: 14px;
+    margin-top: 5px;
 }
 
 .postTitle{
@@ -364,7 +393,7 @@ article:hover{
     font-size: 15px;
 }
 
-.loginbutton, .signupButton, .logoutbutton{
+.loginbutton, .signupButton, .logoutbutton, .createpostbutton{
     border: 1px solid transparent;
     border-radius: 100px;
     /*background-color: #ff6200;*/
@@ -478,16 +507,22 @@ article:hover{
     opacity: 0.5;
 }
 
+.commentsTop{
+    display: flex;
+    align-items: center;
+}
+
 .commentsTop img{
     width: 25px;
     height: 25px;
+    border-radius: 50%;
 }
 
 .commentsTop a:nth-child(2){
     font-size: 12px;
     text-decoration: none;
     color: #3B5998;
-    margin-left: 5px;
+    margin-left: 10px;
 }
 
 .commentsTop a:nth-child(3){
@@ -592,14 +627,47 @@ article:hover{
 .createPost-container img{
     width: 65%;
     height: 100%;
+    border-radius: 5px;
 }
 
-#createPost_form{
+.createPost_form{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 35%;
     margin-bottom: 20px;
+}
+
+.createPost_form input[type="text"], input[type="url"]{
+    border: none;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    font-size: 15px;
+    margin-top: 15px;
+    width: 200px;
+    padding-bottom: 10px;
+}
+
+.createPost_form input[type="text"]:focus, input[type="url"]:focus{
+    outline: none;
+}
+
+.createPost_form textarea{
+    border-radius: 5px;
+    resize: none;
+    border: 1px solid gray;
+    margin-top: 15px;
+    width: 250px;
+    font-size: 15px;
+    padding: 10px;
+}
+
+.createPost_form textarea:focus{
+    outline: none;
+}
+
+.createPost_form input[type="submit"]{
+    margin-top: 20px;
 }
 
 #close{
@@ -611,9 +679,18 @@ article:hover{
     cursor: pointer;
 }
 
-#close:hover{
+#close:hover, #close_createComment:hover{
     border: 1px solid gray;
     border-radius: 100px;
+}
+
+#close_createComment{
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
 
 .login-form{
@@ -700,3 +777,32 @@ article:hover{
     display: none;
 }
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 10px;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.dropdown-content a {
+  /*float: none;*/
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+    min-width: 100px;
+  display: block;
+  text-align: center;
+    border-radius: 5px;
+}
+
+.dropdown-content a:hover{
+    color: white;
+    background-color: #414059;
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+    flex-direction: column;
+}
