--- a/forum/templates/forum/topic_details.html
+++ b/forum/templates/forum/topic_details.html
@@ -61,6 +61,7 @@
                     {{ field }}
                 {% endfor %}
                 <input type="submit" class="createpostbutton" value="Post">
+                <input type="hidden" id="createPost-topicId" value="{{ topic.id }}">
             </form>
         </div>
     </div>
