--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -12,7 +12,7 @@
                     <a href="{% url 'forum:profile' post.owner.username %}"><img src="{{ post.owner.profile.profile_image }}" alt="Avatar" class="avatar"></a>
                     <a href="{% url 'forum:profile' post.owner.username %}">{{ post.owner.username}}</a>
                     <a>posted in</a>
-                    <a href="{% url 'forum:topic' post.topic.slug %}">t/{{ post.topic.title }}</a>
+                    <a href="{% url 'forum:topic' post.topic.slug %}">t/{{ post.topic.slug }}</a>
                     <a>{{ post.pub_date }}</a>
                 </div>
                 <div class="textpost">
