Assync new post

--- a/forum/templates/forum/topic_details.html
+++ b/forum/templates/forum/topic_details.html
@@ -15,13 +15,15 @@
                 </form>
             </div>
         </div>
+        <div id="topic_details-PostsDiv">
         {% if page_list %}
         {% for post in page_list %}
             {% include 'forum/post_card.html' %}
         {% endfor %}
-    {% else %}
-        <p>Não há posts</p>
-    {% endif %}
+        {% else %}
+            <p>Não há posts</p>
+        {% endif %}
+        </div>
     </section>
 {% endblock articles %}
 
@@ -44,6 +46,10 @@
                 {% endfor %}
                 <input type="submit" class="createpostbutton" value="Post">
                 <input type="hidden" id="createPost-topicId" value="{{ topic.id }}">
+                <input type="hidden" id="profileURL" value="{% url 'forum:profile' 'username' %}">
+                <input type="hidden" id="topicURL" value="{% url 'forum:topic' topic.slug %}">
+                <input type="hidden" id="likeURL" value="{% url 'forum:api_like_toggle' %}">
+                <input type="hidden" id="postURL" value="{% url 'forum:post' 1 %}">
             </form>
         </div>
     </div>
