Changed video tag to iframe

--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block articles %}
-    <section>
+    <section class="Posts-Section">
     {% if page_list %}
         {% for post in page_list %}
             {% include 'forum/post_card.html' %}
