--- a/forum/templates/forum/post_details.html
+++ b/forum/templates/forum/post_details.html
@@ -21,9 +21,8 @@
                         <img src="{{ post.image }}">
                     {% endif %}
                     {% if post.video %}
-                        <video>
-                            <source src="{{ image.video }}">
-                        </video>
+                        <iframe src="{{ post.video }}">
+                        </iframe>
                     {% endif %}
                     <p class="postText">{{ post.text }}</p>
                 </div>
