--- a/forum/templates/forum/search.html
+++ b/forum/templates/forum/search.html
@@ -12,24 +12,13 @@
             <div id="postsTab" class="tabContent">
                 {% if posts %}
                     {% for post in posts %}
-                        <div class="postsSearch detail_post-articles" value="{% url 'forum:post' post.id %}">
-                            <div class="toppost topsearchpost">
-                                <a href="{% url 'forum:profile' post.owner.username %}"><img src="{{ post.owner.profile.profile_image}}" alt="Avatar"></a>
-                                <a href="{% url 'forum:profile' post.owner.username %}">{{ post.owner.username}}</a>
-                                <a>posted in</a>
-                                <a href="{% url 'forum:topic' post.topic.slug %}">t/{{ post.topic.title }}</a>
-                                <a>{{ post.pub_date }}</a>
-                            </div>
-                            <div class="bottomsearchpost">
-                                <p class="postsearchtitle">{{ post.title }}</p>
-                                <p name="Post{{ post.id }}" class="numbersearchpizzas">{{ post.num_likes }} Like{{ post.num_likes|pluralize }}</p>
-                            </div>
-                        </div>
+                        {% include 'forum/post_profile_card.html' %}
                     {% endfor %}
                 {% else %}
                     <a>There are no posts</a>
                 {% endif %}
             </div>
+
             <div id="topicsTab" class="tabContent">
                 {% if topics %}
                     {% for topic in topics %}
