--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -56,7 +56,7 @@
                 <div class="dropdown">
                     <a href="{% url 'forum:profile' user.username %}"><img src="{{ user.profile.profile_image }}" alt="Avatar" class="avatar"></a>
                     <div class="dropdown-content">
-                        <a href="#">Perfil</a>
+                        <a href="{% url 'forum:profile' user.username %}">Perfil</a>
                         <a href="{% url 'forum:logout' %}">Logout</a>
                     </div>
                 </div>
