--- a/forum/templates/forum/liked_Posts_list.html
+++ b/forum/templates/forum/liked_Posts_list.html
@@ -5,7 +5,7 @@
     {% if posts %}
         <section>
             {% for post in posts %}
-                {% include 'forum/post_card.html' %}
+                {% include 'forum/cards/post_card.html' %}
             {% endfor %}
         </section>
     {% endif %}
