--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -5,7 +5,7 @@
     <section class="Posts-Section">
     {% if page_list %}
         {% for post in page_list %}
-            {% include 'forum/post_card.html' %}
+            {% include 'forum/cards/post_card.html' %}
         {% endfor %}
     {% else %}
         <p>Não há posts</p>
